Fix unable to select items problem, used z-index

--- a/_dev/css/components/categories.scss
+++ b/_dev/css/components/categories.scss
@@ -83,6 +83,7 @@
     .products-sort-order {
       > .dropdown-menu {
         top: calc(100% + #{$spacer-2});
+        z-index: 9;
       }
     }
   }
